--- a/css/style.css
+++ b/css/style.css
@@ -18,21 +18,15 @@ a:hover {
 #header {
 	position:relative;
 	width: 100%;
-	height:50px;
-	border-bottom: #CCC solid 1px;
+	height:60px;
+	border-bottom: #777777 solid 2px;
 	color: #FFF;
-	text-shadow: 3px 3px 8px #000;
-	font: bold 18px/50px Verdana, Geneva, sans-serif;
-	text-align:left;
-	background: #1e5799; /* Old browsers */
-	background: -moz-linear-gradient(top,  #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e5799), color-stop(50%,#2989d8), color-stop(51%,#207cca), color-stop(100%,#7db9e8));
-	background: -webkit-linear-gradient(top,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
-	background: -o-linear-gradient(top,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
-	background: -ms-linear-gradient(top,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
-	background: linear-gradient(to bottom,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 );
-	border-radius: 10px;
+	text-shadow: 3px 3px 3px #000;
+	font: bold 24px Arial, Helvetica, sans-serif;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 60px;
+	background: #0000FF; /* Old browsers */
 
 }
 
@@ -308,8 +302,8 @@ tr.hl:hover {
 	height: 200px;
 	margin-left: 0px;
 	padding: 0px;
-	border: 1px solid transparent;
-	background-color: ;
+	border: 1px solid lightgrey;
+	background-color: lightgrey;
 }
 
 #maps {
