--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ tr.hl:hover {
 	margin-left: 0px;
 	padding: 0px;
 	border: 1px solid lightgrey;
-	background-color: blue;
+	background-color: lightgrey;
 }
 
 #maps {
